# agentic-devops-loop

./: .env.example  .eslintrc.json  .gitignore  AGENTS.md  CLAUDE.md  Caddyfile  Dockerfile  PR_REVIEW.md  README.md  SYSTEM_MAP.md  SYSTEM_OVERVIEW.md  app.py  config.py  demo.html  docker-compose.apps.yml  docker-compose.prod.yml  eslint.config.js  eslint.config.mjs  example.html  jest.config.js  jest.config.tracker.js  package-lock.json  package.json  pyproject.toml  pytest.ini  requirements.txt  test-jules-trigger.js  test.js  todo-app.html
.claude/: CLAUDE.md  PROMISE_FLAG_FORMAT.md  package-allowlist.json  package-allowlist.schema.json  ralph-config.json  settings.json
.githooks/: commit-msg  post-commit  pre-push
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  jules-config.yml
app/: __init__.py
bookit/: ARCHITECTURE.md
bookit/backend/: Dockerfile  pyproject.toml  requirements.txt
bookit/backend/scripts/: seed.py
bookit/backend/src/bookit/: config.py  database.py  main.py
bookit/backend/src/bookit/models/: __init__.py
bookit/backend/src/bookit/routers/: __init__.py  bookings.py  payments.py  public.py  recurring.py  services.py  slots.py  stats.py  tenants.py
bookit/backend/src/bookit/schemas/: __init__.py  booking.py  public.py  recurring.py  service.py  slot.py  stats.py  tenant.py
bookit/backend/src/bookit/services/: __init__.py  booking_service.py  notification_service.py  payment_service.py  recurring_service.py  slot_service.py  stats_service.py
bookit/backend/tests/: conftest.py  test_api.py  test_booking.py  test_notifications.py  test_payments.py  test_public.py  test_recurring.py  test_slots.py  test_stats.py
docs/: AGENTIC_DEVOPS_LOOP.md  CURRENT_TASK.md  GUIDELINES.md  JULES_INTEGRATION.md  QUICKSTART.md  REMOTE_DEV.md  SPEC.md  SYSTEM_OVERVIEW.md  TIMESTAMP_DISPLAY.md  index.html  jira-ticket-template-flask-tdd.md  jules-self-healing-fix.patch  nav-styles.css  self-healing.yml.fixed
document_upload_app/: __init__.py  app.py  test_app.py  upload_app.py
eventit/backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
eventit/backend/alembic/: env.py
eventit/backend/alembic/versions/: 0001_initial_schema.py
eventit/backend/scripts/: seed.py
eventit/backend/src/eventit/: config.py  database.py  main.py
eventit/backend/src/eventit/models/: base.py  checkin.py  event.py  tenant.py  ticket.py
eventit/backend/src/eventit/routers/: checkin.py  events.py  public.py  tenants.py  tickets.py
eventit/backend/src/eventit/schemas/: checkin.py  event.py  tenant.py  ticket.py
eventit/backend/src/eventit/services/: checkin_service.py  event_service.py  tenant_service.py  ticket_service.py
eventit/backend/tests/: conftest.py  test_checkin.py  test_events.py  test_qr.py  test_tickets.py
infra/: hetzner-setup.sh  postgres-init.sh
monitor-server/: server.py
scripts/: epic-runner.py  (+4 more)
storeit/backend/: .dockerignore  Dockerfile  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
storeit/backend/alembic/: env.py
storeit/backend/alembic/versions/: 1918cc1d3287_initial_schema.py
storeit/backend/src/storeit/: config.py  database.py  main.py
storeit/backend/src/storeit/models/: base.py  cart.py  inventory.py  order.py  product.py
storeit/backend/src/storeit/routers/: cart.py  categories.py  inventory.py  orders.py  payments.py  products.py
storeit/backend/src/storeit/schemas/: cart.py  inventory.py  order.py  product.py
storeit/backend/src/storeit/services/: cart_service.py  inventory_service.py  order_service.py  payment_service.py  product_service.py
storeit/backend/tests/: conftest.py  test_cart.py  test_health.py  test_inventory.py  test_models.py  test_orders.py  test_payments.py  test_products.py  test_race_conditions.py  test_reservations.py
trackit/backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
trackit/backend/src/trackit/: config.py  database.py  main.py
trackit/backend/src/trackit/routers/: invoice.py  projects.py  tenants.py
trackit/backend/src/trackit/schemas/: invoice.py  project.py  tenant.py  time_entry.py
trackit/backend/src/trackit/services/: invoice_service.py  project_service.py  tenant_service.py  time_service.py
trackit/backend/tests/: conftest.py  test_api.py  test_invoice.py  test_models.py
voice-pipeline/: Dockerfile  README.md  pyproject.toml  requirements.txt
voice-pipeline/src/: config.py  main.py
voice-pipeline/src/transcriber/: whisper_local.py
voice-pipeline/tests/: conftest.py  test_intent.py  test_pipeline.py  test_transcriber.py
(+193 files in other folders)
